--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
 
         <div class="card" style="width: 18rem;">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Light/Dark Mode</h5>
 
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
-                <a href="#" class="card-link">Entrar</a>
+                <a href="./light-dark-mode/index.html" class="card-link">Entrar</a>
       
             </div>
         </div>
 
         <div class="card" style="width: 18rem;">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Apenas... Gatos!</h5>
 
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
-                <a href="#" class="card-link">Entrar</a>
+                <a href="./apenas-gatos/index.html" class="card-link">Entrar</a>
       
             </div>
         </div>
