--- a/calculadora-pj/index.html
+++ b/calculadora-pj/index.html
@@ -84,7 +84,7 @@
 
   <footer class="rodape">Desenvolvido por: <a href="https://www.linkedin.com/in/mylenaverspeelt/" target="_blank">Mylena Verspeelt  </a></footer>
 
-  <script type="text/javascript" src="js/script.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
