--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
 
     </div>
 
+    <footer>
+        <a href="https://www.linkedin.com/in/mylenaverspeelt/" target="_blank">Desenvolvido por: Mylena Verspeelt </a>
+    </footer>
 
 </body>
 
