change colors + read-me att

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div>
 
     <footer>
-        <a href="https://www.linkedin.com/in/mylenaverspeelt/" target="_blank">Desenvolvido por: Mylena Verspeelt </a>
+        <p>Desenvolvido por: <a href="https://www.linkedin.com/in/mylenaverspeelt/" target="_blank">Mylena Verspeelt </a></p>
     </footer>
 
 </body>
